# Chronos

./: .gitignore  LICENSE  README.md  app.py  example.py  main.py  model_config.json  pyproject.toml  requirements.txt
prompts/: final_sim_analysis_friendly_prompt.yaml  final_sim_analysis_prompt.yaml  model_generation_prompt.yaml  parameter_variation_prompt.yaml  problem_statement_optimization_prompt.yaml  sim_analysis_prompt.yaml
src/: analysis_and_summary.py  generate_diagrams.py  model_generation.py  orchestrator.py  parameter_variation.py  problem_statement_optimizer.py  simulation_core.py  utils.py
