[project]
name = "choronos"
version = "0.1.0"
description = "Run simulation based on System thinking for any problem statement"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "anthropic==0.52.2",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "distro==1.9.0",
    "executing==2.2.0",
    "fastapi==0.115.12",
    "ffmpy==0.6.0",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "fonttools==4.58.2",
    "fsspec==2025.5.1",
    "google-ai-generativelanguage==0.6.18",
    "google-api-core==2.25.0",
    "google-auth==2.40.3",
    "googleapis-common-protos==1.70.0",
    "gradio==5.33.0",
    "gradio-client==1.10.2",
    "greenlet==3.2.3",
    "groovy==0.1.2",
    "grpcio==1.72.1",
    "grpcio-status==1.72.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.32.4",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "kiwisolver==1.4.8",
    "langchain==0.3.25",
    "langchain-anthropic==0.3.15",
    "langchain-core==0.3.64",
    "langchain-google-genai==2.1.5",
    "langchain-openai==0.3.21",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.45",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "nest-asyncio==1.6.0",
    "numpy==2.2.6",
    "openai==1.84.0",
    "orjson==3.10.18",
    "packaging==24.2",
    "pandas==2.3.0",
    "parso==0.8.4",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydub==0.25.1",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pywin32==310",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rsa==4.9.1",
    "ruff==0.11.13",
    "safehttpx==0.1.6",
    "semantic-version==2.10.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "tomlkit==0.13.3",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.3",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "zstandard==0.23.0",
]
